# vgeo_mvp_01

./: .gitignore  GDELT_configs_explanation.md  README.md  pyproject.toml  settings_sample.ini
main/: collect.py  collect_and_generate.py  collect_input.ini  generate.py  generate_settings_sample.ini  sample_queries.txt  settings_sample.ini
vgeo/collect/: 2503280542_US_trade_new_scenario_report.md  bias_ratings.csv  clean_markdown.py  clean_md.py  collect_internal_settings.ini  collect_internal_settings_sample.ini  generate_features.py  kw_phrases.txt  scenarios_export.json  scenarios_export_2.json  scenarios_export_3.json  scenarios_export_4.json  scenarios_llm.py  search_and_scrape_gdelt.py  upload_vector_db.py
vgeo/generate/: langgraph.json
vgeo/generate/src/: configuration.py  graph.py  prompts.py  state.py  utils.py  vectorstore.py
