[tool.poetry]
name = "vgeo"
version = "0.1.0"
description = "vgeo mvp backend"
authors = ["James Minkyu Song"]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
